--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,8 +1,12 @@
+{{ $style := resources.Get "main.scss" | toCSS | minify }}
+
 <!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>Mu Calculus</title>
+        <link rel="stylesheet" href="normalize.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="{{ $style.RelPermalink }}" type="text/css" media="screen" />
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <script src="script.js"></script>
