Add spacing after every 4 formulas
To make it a little easier to match formula with a name.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -35,6 +35,11 @@ h1, h2, h3, h4, h5, h6 {
 .derivative-entry {
     display: contents;
 
+    &:nth-child(4n):after {
+        content: "";
+        grid-column: span 2;
+    }
+
     .formula {
         margin: 0;
     }
